处理yml文件中文注释问题，依赖hikaricp 5.0.1